<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">安全用药二维码</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="string_main">安全用药</string>
	<string name="lastList">往期列表</string>
	<string name="discussMeetting">讨论集会</string>
	<string name="myFavorities">我的收藏</string>
	<string name="myComments">我的评论</string>
	<string name="settings">设置</string>

	<string name="loginnameshow">请输入用户名</string>
	<string name="loginshow">登 陆</string>
	<string name="remenpassword">记住密码</string>
	<string name="register">注册新账号</string>
	<string name="login_title">安 全 用 药 助 手</string>
	<string name="register_acount">账 户</string>
	<string name="register_acount_hint">请使用邮箱名注册</string>
	<string name="register_pwd">密 码</string>
	<string name="register_pwd_hint">密码至少6位</string>
	<string name="register_checkbox">已阅读并同意</string>
	<string name="register_tv">《安全用药App服务条款》</string>
	<string name="register_bt_text">注册该账户</string>

</resources>
