<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#123456"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">
    <!-- 背景图片先不管了吧，有好的图替换上就好 -->

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_title"
        android:textColor="@color/color_lightgray"
        android:textSize="30sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <EditText
        android:id="@+id/username"
        style="@style/LoginEditTextStyle"
        android:layout_marginTop="30dip"
        android:ems="10"
        android:hint="@string/loginnameshow"
        android:drawableLeft="@drawable/ic_login_un"
        android:drawablePadding="2dp"
        android:maxLength="30"
        android:paddingRight="2dp"
        android:textColorHighlight="#7e4d84">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/password"
        style="@style/LoginEditTextStyle"
        android:layout_marginTop="20dip"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_login_pwd"
        android:paddingRight="2dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/login_view_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/login_button_select"
        android:gravity="center"
        android:text="@string/loginshow"
        android:textColor="@color/color_white"
        android:textSize="@dimen/login_et_size" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:button="@null"
            android:checked="true"
            android:drawableLeft="@drawable/checkbox_bg"
            android:paddingTop="2dp"
            android:text="@string/remenpassword"
            android:textSize="12sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_login_regist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_reg_button"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/color_white"
            android:textSize="12sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />

</LinearLayout>