<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/register_bg_color"
    android:orientation="vertical">

    <include layout="@layout/title_bar" />

    <LinearLayout
        android:id="@+id/linearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/register_input_bg"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_acount"
                    android:textColor="#000000"
                    android:textSize="19sp" />

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/register_acount_hint"
                    android:inputType="textEmailAddress"
                    android:textSize="17sp" />
                <!--
                                <TextView
                                    android:id="@+id/tv_region_modify"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:clickable="true"
                                    android:gravity="right"
                                    android:text="重复检查"
                                    android:textColor="#50a8e0"
                                    android:textSize="19sp" />
                                    -->
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/color_lightgray" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_pwd"
                    android:textColor="#000000"
                    android:textSize="19sp" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@null"
                    android:hint="@string/register_pwd_hint"
                    android:textSize="17sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chk_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:button="@null"
                android:checked="true"
                android:drawableLeft="@drawable/checkbox_bg"
                android:drawablePadding="4dp"
                android:padding="2dp"
                android:text="@string/register_checkbox"
                android:textColor="#888888" />

            <TextView
                android:id="@+id/tv_medicine_serve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/register_tv"
                android:textColor="#5858f8" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_send_code"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/register_button_select"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:text="@string/register_bt_text"
            android:textSize="19sp" />
    </LinearLayout>


</LinearLayout>